# ttt-haskell

./: .gitignore  README.md  ttt.cabal
app/: Main.hs
src/: Types.hs
src/TTT/: Board.hs  IO.hs  Prompt.hs  Settings.hs  Validation.hs
src/TTT/Console/: BoardRepresentation.hs  Settings.hs
src/TTT/Console/Game/: Loop.hs  Runner.hs
src/TTT/Console/IO/: IO.hs  IOContext.hs  Prompt.hs
src/TTT/Console/Messenger/: EnglishMessenger.hs  PortugueseMessenger.hs  Validation.hs
src/TTT/Console/Players/: Prompt.hs  User.hs  Validation.hs
src/TTT/Console/Utils/: Helpers.hs
src/TTT/Core/: Board.hs  Messenger.hs  Types.hs  Validation.hs
src/TTT/Core/Game/: GameContext.hs  Status.hs
src/TTT/Core/Players/: Player.hs
src/TTT/Core/Players/Computer/: HardComputer.hs  Negamax.hs
src/TTT/Core/Utils/: Helpers.hs
src/TTT/Game/: Context.hs  Loop.hs  Runner.hs  Status.hs
src/TTT/Messenger/: EnglishMessenger.hs  Messenger.hs  PortugueseMessenger.hs  Validation.hs
src/TTT/Messenger/Utils/: Helpers.hs
src/TTT/Players/: Player.hs
src/TTT/Utils/: Helpers.hs
test/TTT/: BoardSpec.hs  PromptSpec.hs  ValidationSpec.hs
test/TTT/Console/: BoardRepresentationSpec.hs
test/TTT/Console/Game/: LoopSpec.hs
test/TTT/Console/IO/: PromptSpec.hs
test/TTT/Console/Messenger/: EnglishMessengerSpec.hs
test/TTT/Console/Players/: PromptSpec.hs  UserSpec.hs  ValidationSpec.hs
test/TTT/Console/Utils/: HelpersSpec.hs
test/TTT/Core/: BoardSpec.hs  ValidationSpec.hs
test/TTT/Core/Game/: StatusSpec.hs
test/TTT/Core/Players/Computer/: HardComputerSpec.hs  NegamaxSpec.hs
test/TTT/Core/Utils/: HelpersSpec.hs
test/TTT/Game/: LoopSpec.hs  StatusSpec.hs
test/TTT/Messenger/: EnglishMessengerSpec.hs  ValidationSpec.hs
test/TTT/Utils/: HelpersSpec.hs
