name:                ttt
version:             0.1.0.0
synopsis:            Tic Tac Toe
homepage:            https://bitbucket.com/pwdd/ttt
license:             MIT
license-file:        LICENSE
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , TTT.Board
                     , TTT.Validation
                     , TTT.Game.Status
                     , TTT.Messenger.EnglishMessenger
                     , TTT.Utils.Helpers
                     , TTT.Prompt
                     , TTT.Game.Loop
                     , TTT.IO
                     , TTT.Game.Runner
                     , TTT.Settings
                     , TTT.Players.Player
                     , TTT.Game.Context
                     , TTT.Messenger.Messenger
  build-depends:       base >= 4.7 && < 5
                     , vector
  default-language:    Haskell2010

executable ttt
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ttt
  default-language:    Haskell2010

test-suite ttt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TTT.BoardSpec
                     , TTT.ValidationSpec
                     , TTT.Game.StatusSpec
                     , TTT.Utils.HelpersSpec
                     , TTT.Messenger.EnglishMessengerSpec
                     , TTT.PromptSpec
                     , TTT.Game.LoopSpec
  build-depends:       base
                     , ttt
                     , hspec
                     , random
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://bitbucket.com/pwdd/ttt

