name:                ttt
version:             0.1.0.0
synopsis:            Tic Tac Toe
homepage:            https://bitbucket.com/pwdd/ttt
license:             MIT
license-file:        LICENSE
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TTT.Console.Game.Loop
                     , TTT.Console.Game.Runner
                     , TTT.Console.IO.IO
                     , TTT.Console.IO.IOContext
                     , TTT.Console.IO.Prompt
                     , TTT.Console.Messenger.EnglishMessenger
                     , TTT.Console.Messenger.PortugueseMessenger
                     , TTT.Console.Messenger.Validation
                     , TTT.Console.Players.User
                     , TTT.Console.Utils.Helpers
                     , TTT.Console.BoardRepresentation
                     , TTT.Console.Settings
                     , TTT.Core.Game.GameContext
                     , TTT.Core.Game.Status
                     , TTT.Core.Players.Computer.HardComputer
                     , TTT.Core.Players.Computer.Negamax
                     , TTT.Core.Players.Player
                     , TTT.Core.Utils.Helpers
                     , TTT.Core.Board
                     , TTT.Core.Messenger
                     , TTT.Core.Types
                     , TTT.Core.Validation
  build-depends:       base >= 4.7 && < 5
                     , parallel
                     , vector
  default-language:    Haskell2010

executable ttt
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ttt
  default-language:    Haskell2010

test-suite ttt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TTT.Console.Game.LoopSpec
                     , TTT.Console.IO.PromptSpec
                     , TTT.Console.BoardRepresentationSpec
                     , TTT.Core.Game.StatusSpec
                     , TTT.Core.Players.Computer.HardComputerSpec
                     , TTT.Core.Players.Computer.NegamaxSpec
                     , TTT.Core.Utils.HelpersSpec
                     , TTT.Core.BoardSpec
                     , TTT.Core.ValidationSpec
  build-depends:       base
                     , ttt
                     , hspec
                     , random
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://bitbucket.com/pwdd/ttt

